# warehouse_management

./: .dockerignore  .env.dev  .env.prod  .env.test  .gitignore  Dockerfile  README.md  Taskfile.yml  Taskseeder.yml  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 798d6daef375_init.py  e0e98910be6a_init.py
app/: main.py
app/core/: config.py  container.py  exception_handlers.py  exceptions.py  log_config.py
app/dependency/: check_permission.py  order_depends.py  product_depends.py  request_control_middleware.py  server_logs_depends.py  token.py  user_token.py
app/enum/: order_enum.py
app/model/: __init__.py  order.py  order_item.py  permission.py  product.py  role.py  role_permission.py  server_logs.py  user.py
app/repository/: base_repository.py  order_repository.py  permission_repository.py  product_repository.py  role_repository.py  server_logs_repository.py  user_repository.py
app/schema/: auth_schema.py  base_schema.py  order_item_schema.py  order_schema.py  permission_schema.py  product_schema.py  role_schema.py  server_logs_schema.py  user_schema.py
app/seeders/: seed.py  seed_admin_role.py  seed_client_user_and_role.py  seed_create_database.py  seed_db_migration.py  seed_default_users.py  seed_permissions.py  seed_user_role.py
app/services/: auth_service.py  base_service.py  order_service.py  permission_service.py  product_service.py  role_service.py  server_logs_service.py  (+1 more)
docker/: app.sh  pytest.sh  seeders.sh
tests/: conftest.py  pytest_role.py  unittest_role.py
warehouse_management/: main.py
(+86 files in other folders)
